# CMakeList.txt : CMake project for COP3003_Group_Project, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (COP3003_Group_Project "main.cpp" "main.h"    "character.h" "equipment.h" "timers.h")

# TODO: Add tests and install targets if needed.
